# chariott

./: .alexignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlinkcheck.jsonc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.intent_brokering  Dockerfile.intent_brokering.arm64  Dockerfile.intent_brokering.valgrind  Dockerfile.service_discovery  Dockerfile.service_discovery.amd64  Dockerfile.service_discovery.arm64  Dockerfile.service_discovery.multi  Dockerfile.valgrind  NOTICE  README.md  SECURITY.md  buf.work.yaml  build-all-containers.sh  build.rs
car-bridge/: Cargo.toml  README.md
car-bridge/src/: chariott.rs  drainage.rs  lib.rs  main.rs  messaging.rs  streaming.rs
common/: Cargo.toml  build.rs
common/src/: chariott_api.rs  config.rs  error.rs  ess.rs  ext.rs  lib.rs  proto.rs  query.rs  shutdown.rs  streaming_ess.rs  tokio_runtime_fork.rs
ess/: Cargo.toml
ess/bench/: data.js
ess/benches/: load_bench.rs
ess/src/: ess.rs  lib.rs
examples/applications/cloud-object-detection/: Cargo.toml  README.md
examples/applications/cloud-object-detection/src/: chariott_provider.rs  detection.rs  main.rs
examples/applications/invoke-command/: Cargo.toml  README.md
examples/applications/invoke-command/src/: chariott_provider.rs  main.rs
examples/applications/kv-app/: Cargo.toml  README.md
examples/applications/kv-app/src/: chariott_provider.rs  main.rs
examples/applications/lt-consumer/: Cargo.toml
examples/applications/lt-consumer/src/: main.rs
examples/applications/lt-provider/: Cargo.toml
examples/applications/lt-provider/src/: main.rs
examples/applications/mock-vas/: Cargo.toml
examples/applications/mock-vas/src/: chariott_provider.rs  communication.rs  main.rs  simulation.rs
examples/applications/sample_provider_template/: Cargo.toml
examples/applications/sample_provider_template/src/: chariott_provider.rs  main.rs
examples/applications/simulated-camera/: Cargo.toml  LICENSE_IMAGES  README.md
examples/applications/simulated-camera/src/: camera.rs  chariott_provider.rs  communication.rs  main.rs
examples/common/: Cargo.toml  build.rs
examples/common/src/: lib.rs  url.rs
examples/common/src/chariott/: api.rs  inspection.rs  mod.rs  proto.rs  provider.rs  registration.rs  streaming.rs  value.rs
examples/common/src/examples/: detection.rs  mod.rs  proto.rs
intent_brokering/: Cargo.toml  README.md
intent_brokering/common/: Cargo.toml
intent_brokering/common/src/: error.rs  lib.rs  query.rs  streaming_ess.rs  tokio_runtime_fork.rs
intent_brokering/ess/: Cargo.toml  README.md
intent_brokering/ess/benches/: load_bench.rs
intent_brokering/ess/src/: ess.rs  lib.rs
intent_brokering/examples/applications/: Dockerfile.base  Dockerfile.cloud-object-detection  Dockerfile.generic  Dockerfile.kv-app.ci  Dockerfile.lt-provider-app.ci  Dockerfile.mock-vas  Dockerfile.simulated-camera  README.md  invoke_object_detection.sh  run_demo.sh
intent_brokering/examples/applications/cloud-object-detection/: Cargo.toml  README.md
intent_brokering/examples/applications/cloud-object-detection/src/: chariott_provider.rs  detection.rs  intent_provider.rs  main.rs
intent_brokering/examples/applications/dog-mode-logic/: Cargo.toml
intent_brokering/examples/applications/dog-mode-logic/src/: dog_mode_status.rs  main.rs
intent_brokering/examples/applications/dog-mode-ui/: README.md  mock_provider_dog_mode_demo.sh
intent_brokering/examples/applications/dog-mode-ui/src/: DogModeDashboard.csproj  Program.cs
intent_brokering/examples/applications/invoke-command/: Cargo.toml  README.md
intent_brokering/examples/applications/invoke-command/src/: intent_provider.rs  main.rs
intent_brokering/examples/applications/kv-app/: Cargo.toml  README.md
intent_brokering/examples/applications/kv-app/src/: chariott_provider.rs  intent_provider.rs  main.rs
intent_brokering/examples/applications/local-object-detection/: Cargo.toml  README.md
intent_brokering/examples/applications/local-object-detection/src/: detection.rs  intent_provider.rs  main.rs
intent_brokering/examples/applications/lt-consumer/: Cargo.toml
intent_brokering/examples/applications/lt-consumer/src/: main.rs
intent_brokering/examples/applications/lt-provider/: Cargo.toml
intent_brokering/examples/applications/lt-provider/src/: main.rs
intent_brokering/examples/applications/mock-vas/: Cargo.toml  README.md
intent_brokering/examples/applications/mock-vas/src/: chariott_provider.rs  communication.rs  intent_provider.rs  main.rs  simulation.rs
intent_brokering/examples/applications/proto/: buf.yaml
intent_brokering/examples/applications/simple-provider/: Cargo.toml  README.md
intent_brokering/examples/applications/simulated-camera/: Cargo.toml  README.md
intent_brokering/examples/common/: Cargo.toml  build.rs
intent_brokering/examples/common/src/: lib.rs
intent_brokering/keyvalue/: README.md
intent_brokering/keyvalue/src/: lib.rs
intent_brokering/proto/: buf.yaml
intent_brokering/proto.rs/: Cargo.toml  build.rs
intent_brokering/proto.rs/src/: lib.rs
intent_brokering/proto/common/v1/: common.proto
intent_brokering/proto/provider/v1/: provider.proto
intent_brokering/proto/runtime/v1/: runtime.proto
intent_brokering/proto/streaming/v1/: streaming.proto
intent_brokering/src/: chariott_grpc.rs  connection_provider.rs  execution.rs  intent_broker.rs  intent_brokering_grpc.rs  lib.rs  main.rs  registry.rs  streaming.rs
intent_brokering/tests/: README.md  chariott_integration.rs  common.rs  container-e2e-tests-wsl2.sh  cover.sh  provider.rs  registry-e2e.rs  store-e2e.rs
intent_brokering/tools/: charc  charc.md
service_discovery/core/: Cargo.toml
service_discovery/core/src/: main.rs  registry_impl.rs  service_registry_impl.rs
service_discovery/proto_build/: Cargo.toml  build.rs
service_discovery/proto_build/src/: lib.rs
service_discovery/samples/simple-discovery/consumer/: Cargo.toml
service_discovery/samples/simple-discovery/provider/: Cargo.toml
(+201 files in other folders)
