# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "common",
    "ess",
    "examples/applications/cloud-object-detection",
    "examples/applications/dog-mode-logic",
    "examples/applications/kv-app",
    "examples/applications/invoke-command",
    "examples/applications/local-object-detection",
    "examples/applications/lt-consumer",
    "examples/applications/lt-provider",
    "examples/applications/mock-vas",
    "examples/applications/simple-provider",
    "examples/applications/simulated-camera",
    "examples/common",
    "keyvalue",
    "proto.rs",
    "service_discovery/core",
    "service_discovery/samples/simple-discovery/consumer",
    "service_discovery/samples/simple-discovery/provider"
]

[package]
name = "chariott"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[test]]
name = "store-e2e"
test = false

[[test]]
name = "registry-e2e"
test = false

[dependencies]
async-recursion = "1.0"
async-trait = { workspace = true }
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-reflection = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chariott-common = { path = "./common/" }
chariott-proto = { path = "./proto.rs/" }
futures = { version = "0.3" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
prost = "0.12"
prost-types = "0.12"
regex = "1.10"
serde = "1.0.193"
serde_json = "1.0.109"
tokio = { version = "1.35", features = ["macros"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.10"
tonic-build = "0.10"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
url = "2.5"
test-case = "2.2.2"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
examples-common = { path = "./examples/common" }
futures = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
test-case = { workspace = true }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
