# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "intent_brokering",
    "intent_brokering/common",
    "intent_brokering/ess",
    "intent_brokering/examples/applications/kv-app",
    "intent_brokering/examples/applications/invoke-command",
    "intent_brokering/examples/applications/lt-consumer",
    "intent_brokering/examples/applications/lt-provider",
    "intent_brokering/examples/applications/simple-provider",
    "intent_brokering/examples/common",
    "intent_brokering/keyvalue",
    "intent_brokering/proto.rs",
    "service_discovery/core",
    "service_discovery/samples/simple-discovery/consumer",
    "service_discovery/samples/simple-discovery/provider"
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
intent_brokering_common = { path = "./intent_brokering/common/" }
intent_brokering_proto = { path = "./intent_brokering/proto.rs/" }
futures = { version = "0.3" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
prost = "0.12"
prost-types = "0.12"
regex = "1.10"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37", features = ["macros"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tonic-build = "0.10"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
url = "2.5"
test-case = "2.2.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
