[package]
name = "car-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chariott-common = { workspace = true }
paho-mqtt = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
