[package]
name = "car-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-channel = "1.7"
async-stream = { workspace = true }
async-trait = { workspace = true }
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
examples-common = { workspace = true }
futures = { workspace = true }
paho-mqtt = "0.11"
prost = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
