[package]
name = "intent_brokering_common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
intent_brokering_proto = { workspace = true }
ess = { path = "../ess" }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { version = "3.11.0" }
