[package]
name = "cloud-object-detection-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
base64 = "0.13.1"
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
examples-common = { path = "../../common/" }
futures = { workspace = true }
lazy_static = { workspace = true }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chariott-common = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
