[package]
name = "lt-provider-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
examples-common = { path = "../../common/" }
rand = "0.8"
rand_distr = "0.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
