[package]
name = "mock-vas"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-std = "1.12"
async-trait = { workspace = true }
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
ess = { path = "../../../ess/" }
examples-common = { path = "../../common/" }
futures = { workspace = true }
keyvalue = { path = "../../../keyvalue/" }
lazy_static = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chariott-common = { path = "../../../common/" }
env_logger = "*"
test-log = "0.2.10"
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = { workspace = true }
