[package]
name = "simulated-camera-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-std = "1.12"
async-stream = "0.3.3"
async-trait = { workspace = true }
chariott-common = { workspace = true }
chariott-proto = { workspace = true }
ess = { path = "../../../ess/" }
keyvalue = { path = "../../../keyvalue/" }
examples-common = { path = "../../common/" }
futures = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
