[package]
name = "cloud-object-detection-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
base64 = "0.21.7"
intent_brokering_common = { workspace = true }
intent_brokering_proto = { workspace = true }
examples-common = { path = "../../common/" }
futures = { workspace = true }
lazy_static = { workspace = true }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
