[package]
name = "invoke-command"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }
intent_brokering_proto = { workspace = true }
examples-common = { path = "../../common/" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
serde_json = "1.0.117"
