[package]
name = "local-object-detection-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }
intent_brokering_proto = { workspace = true }
examples-common = { path = "../../common/" }
image = "0.24.8"
lazy_static = { workspace = true }
ndarray = "0.15.6"
serde = { workspace = true }
serde_json = { workspace = true }
tensorflow = "0.21.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
