[package]
name = "lt-consumer-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bollard = "0.15"
intent_brokering_common = { workspace = true }
examples-common = { path = "../../common/" }
futures = { workspace = true }
futures-util = "0.3"
metrics-util = "0.16"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
