[package]
name = "mock-vas"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-std = "1.12"
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }
intent_brokering_proto = { workspace = true }
ess = { path = "../../../ess/" }
examples-common = { path = "../../common/" }
futures = { workspace = true }
keyvalue = { path = "../../../keyvalue/" }
lazy_static = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
intent_brokering_common = { path = "../../../common/" }
env_logger = "*"
test-log = "0.2.14"
tokio-test = "0.4.3"

[build-dependencies]
tonic-build = { workspace = true }
