[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chariott-common = { path = "../../../../common/" }
proto-servicediscovery = { path = "../../../proto_build/"}
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tonic = { workspace = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
