# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "provider"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chariott-common = { path = "../../../../common/" }
samples_proto = { path = "../../proto_build/" }
service_discovery_proto = { path = "../../../proto_build" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { workspace = true }
